# montage

./: Cargo.toml  README.md  build.rs  flake.nix  package.json  tsconfig.json
Montage.omnifocusjs/: manifest.json
Montage.omnifocusjs/Resources/: break.js  break.ts  extend.js  extend.ts  start.js  start.ts
Montage.omnifocusjs/Resources/en.lproj/: break.strings  extend.strings  manifest.strings  start.strings
crunch_str/: Cargo.toml
crunch_str/src/: lib.rs  word.rs
db/migrations/: 001_sessions.sql
montage/: Cargo.toml
montage/src/: graphql_client.rs  main.rs  scripts.rs  vexer.rs  xbar.rs
montage_client/: Cargo.toml  README.md  build.rs  schema.graphql
montage_client/src/: current_session.rs  current_session_updates.rs  extend_by.rs  extend_to.rs  lib.rs  report.rs  start.rs
montage_client/src/snapshots/: montage_client__current_session__test__current_session_gql_output.snap  montage_client__extend_by__test__gql_output.snap  montage_client__extend_to__test__gql_output.snap  montage_client__report__test__gql_output.snap  montage_client__start__test__gql_output.snap
montage_server/: Cargo.toml  build.rs
montage_server/db/migrations/: 001_sessions.sql  002_set_overnight_sessions_to_offline.sql
montage_server/src/: error.rs  kind.rs  lib.rs  query.rs  report.rs  session.rs  subscription.rs
sample_scripts/: new_session  reminder  session_ended  session_extended  session_over_time
scripts/: update-graphql-schema.sh
src/: graphql_client.rs  main.rs  scripts.rs  server.rs  state.rs  tokio_spawner.rs  vexer.rs
src/client/: current_session.rs  current_session_updates.rs  extend_by.rs  extend_to.rs  mod.rs  schema.graphql  start.rs
src/client/snapshots/: montage__client__current_session__test__current_session_gql_output.snap  montage__client__extend_by__test__gql_output.snap  montage__client__extend_to__test__start_gql_output.snap  montage__client__start__test__gql_output.snap  montage__client__start__test__start_gql_output.snap
src/server/: error.rs  kind.rs  mod.rs  mutation.rs  query.rs  report.rs  session.rs  subscription.rs
types/: omnifocus-globals.d.ts  omnifocus.d.ts
