[package]
name = "montage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
directories = "5.0.1"
notify = { version = "6.0.1", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.3.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
