[package]
name = "montage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.10", features = ["chrono", "chrono-duration", "chrono-tz", "tokio", "tracing"] }
async-graphql-warp = "5.0.10"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
directories = "5.0.1"
notify = { version = "6.0.1", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3.5"
