[workspace]
members = [
  "montage_server",
  "montage_client",
]

# [dependencies]
# async-graphql = { version = "5.0.10", features = ["chrono", "chrono-duration", "chrono-tz", "tokio", "tracing"] }
# async-graphql-warp = "5.0.10"
# async-tungstenite = { version = "0.22.2", features = ["tokio-runtime"] }
# chrono = { version = "0.4.26", features = ["serde"] }
# clap = { version = "4.3.11", features = ["derive", "cargo", "env"] }
# color-eyre = "0.6.2"
# crossbeam-channel = "0.5.8"
# cynic = { version = "3.2.2", features = ["http-reqwest"] }
# directories = "5.0.1"
# futures = "0.3.28"
# graphql-ws-client = { version = "0.5", features = ["client-cynic"] }
# indoc = "2.0.2"
# iso8601 = { version = "0.6.1", features = ["serde"] }
# once_cell = "1.18.0"
# rand = "0.8.5"
# reqwest = "0.11.18"
# serde = { version = "1.0.167", features = ["derive"] }
# sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
# thiserror = "1.0.43"
# tokio = { version = "1.29.1", features = ["full"] }
# tokio-stream = { version = "0.1.14", features = ["sync"] }
# tracing = "0.1.37"
# tracing-subscriber = "0.3.17"
# warp = "0.3.5"
#
# [build-dependencies]
# cynic-codegen = "3"
#
# [dev-dependencies]
# insta = "1"
