[package]
name = "montage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.22.2", features = ["tokio-runtime"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
cynic = { version = "3.2.2", features = ["http-reqwest"] }
directories = "5.0.1"
futures = "0.3.28"
graphql-ws-client = { version = "0.5", features = ["client-cynic"] }
handlebars = "4.3.7"
iso8601 = { version = "0.6.1", features = ["serde"] }
montage_client = { path = "../montage_client" }
montage_server = { path = "../montage_server" }
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
