[package]
name = "montage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.23.0", features = ["tokio-runtime"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "cargo", "env"] }
crunch_str = { path = "../crunch_str" }
color-eyre = "0.6.2"
cynic = { version = "3.2.2", features = ["http-reqwest"] }
directories = "5.0.1"
futures = "0.3.28"
graphql-ws-client = { version = "0.6", features = ["client-cynic"] }
handlebars = "4.4.0"
iso8601 = { version = "0.6.1", features = ["serde"] }
montage_client = { path = "../montage_client" }
montage_server = { path = "../montage_server" }
rand = "0.8.5"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
