[package]
name = "montage_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.7", features = ["chrono", "chrono-duration", "chrono-tz", "tokio", "tracing"] }
async-graphql-warp = "6.0.7"
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
futures = "0.3.28"
indoc = "2.0.4"
iso8601 = { version = "0.6.1", features = ["serde"] }
once_cell = "1.18.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
warp = "0.3.6"
